# Langgraph-projeto-multi-tenart

./: CONTINUACAO_DEPLOY_DEV.md  DEPLOY_DEV_RAPIDO.md  FASE_1_ESTRUTURA_MULTI_TENANT.md  FASE_1_RELATORIO.md  FASE_2_RELATORIO.md  FASE_3_RELATORIO_COMPLETO.md  FASE_3_STATUS.md  GITHUB_ACTIONS_SETUP.md  PLANO_DEPLOY_DEV.md  PROXIMOS_PASSOS_GITHUB_ACTIONS.md  RESUMO_PROJETO.md  SECRETS_GITHUB_RAPIDO.md  executar_inserts_fase1.py  validar_fase1.py
.github/workflows/: deploy-dev.yml  deploy-prod.yml
Langcham-fluxo-atendimento/: .dockerignore  .env.development  .env.example  .env.production  .env.template  .gitignore  AGENT_DOCUMENTATION.md  ATENDIMENTO_HUMANIZADO.md  ATUALIZAR_PRODUCAO.md  BOT_FUNCIONANDO.md  COMANDOS_DOCKER_SWARM.md  COMO_INICIAR_BOT.md  COMO_MONITORAR_MENSAGENS.md  CONFIGURACAO_PORTA_8001.md  CONFIGURAR_RAG.md  CONFIGURAR_WEBHOOK.md  CRIAR_TABELA_SUPABASE.md  DEPLOY.md  DEPLOY_GITHUB.md  DEPLOY_PASSO_A_PASSO.md  DEPLOY_TEST.md  Dockerfile  ERRO_MEMORIA_RESOLVIDO.md  FASE_0_COMPLETO.md  FASE_1_COMPLETO.md  FASE_2_COMPLETO.md  FASE_3_AGENT_IMPLEMENTADO.md  FASE_3_COMPLETO.md  FASE_3_IMPLEMENTACAO_AGENT.md  GITHUB_ACTIONS_SETUP.md  GOOGLE_CALENDAR_SETUP.md  GUIA_TESTE.md  GUIA_TESTES_INTERATIVOS.md  INICIO_RAPIDO.md  INSTALL.md  INSTALLATION.md  NGROK_RAPIDO.md  NGROK_SETUP.md  PROJECT_SETUP_COMPLETE.md  QUICK_DEPLOY_GITHUB.md  (+38 more)
Langcham-fluxo-atendimento/.claude/: settings.local.json
Langcham-fluxo-atendimento/.github/workflows/: deploy.yml
Langcham-fluxo-atendimento/sql/: match_documents_multitenant.sql
Langcham-fluxo-atendimento/src/: main.py
Langcham-fluxo-atendimento/src/clients/: __init__.py  redis_client.py  supabase_client.py  whatsapp_client.py
Langcham-fluxo-atendimento/src/config/: settings.py
Langcham-fluxo-atendimento/src/core/: __init__.py  feature_manager.py  tenant_context.py  tenant_resolver.py
Langcham-fluxo-atendimento/src/graph/: __init__.py  workflow.py
Langcham-fluxo-atendimento/src/history/: __init__.py  supabase_history.py
Langcham-fluxo-atendimento/src/models/: __init__.py  state.py  tenant.py
Langcham-fluxo-atendimento/src/nodes/: __init__.py  agent.py  media.py  response.py  webhook.py
Langcham-fluxo-atendimento/src/tools/: __init__.py  contact_tech.py  rag_search.py  scheduling.py  scheduling_multitenant.py
Langcham-fluxo-atendimento/tests/: conftest.py
